chronicle (xxx) unstable; urgency=low

  * Add the chronicle-spam-test script to the examples/ directory.

 -- Steve Kemp <skx@debian.org>  Tue, 25 Aug 2009 19:01:00 +0100

chronicle (3.7-1) unstable; urgency=medium

  * Added the generation of a sitemap.xml file to the top level of the blog.
  * Bumped standards version to 3.8.3 - no changes required.

 -- Steve Kemp <skx@debian.org>  Thur, 20 August 2009 6:32:06 +0000

chronicle (3.6-1) unstable; urgency=medium

  * Updated the simple theme.
  * Added the option "--author" to allow the authors email address to
    be specified.  This allows author-posted comments to be highlighted
    via CSS.
    (Demonstrated by the simple theme.)
  * Added support for gravitar icons
  * Added support for homepage/link collection & display in comments.

 -- Steve Kemp <skx@debian.org>  Sun, 22 June 2009 11:11:11 +0000

chronicle (3.5-1) unstable; urgency=medium

  * Added a new theme "simple".
  * Added the option "--date-archive-path" to create archives in
    subdirectories.

 -- Steve Kemp <skx@debian.org>  Sun, 22 Feb 2009 08:22:08 +0000

chronicle (3.4-1) unstable; urgency=medium

  * Abort if non-unique titles are encountered.
    (Closes: #508268)
  * Allow date + tag views to be sorted "most recent first",
    via new command line arguments / configuration file options.

 -- Steve Kemp <skx@debian.org>  Wed, 10 Dec 2008 20:22:02 +0000

chronicle (3.3-1) unstable; urgency=medium

  * Default to UTF-8 when processing input in textile formats.  Allow
    --charset=foo to override this.
    Thanks to  Nicolau Werneck for the patch.

 -- Steve Kemp <skx@debian.org>  Sun, 6 Dec 2008 22:16:22 +0000

chronicle (3.2-2) unstable; urgency=medium

  * Install the file cgi-bin/comments.cgi alongside the other example
    files.  (Closes: #504270)

 -- Steve Kemp <skx@debian.org>  Sun, 2 Nov 2008 14:55:41 +0000

chronicle (3.2-1) unstable; urgency=high

  * New upstream release.